--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,8 +1,14 @@
-.about{
-	background-color: black;
-	
-	color: white;
-	font-size:160%;
-	justify-content: space-between;
-	 
+.about {
+  color: white;
+  font-size: 160%;
+  justify-content: space-between;
 }
+
+/* #con {
+  background-image: url(../assets/grey.jpg);
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  font-family: Palatino;
+  text-align: center;
+} */
